@@ -17,13 +17,20 @@
       [After]
         method sin6_family : byte ()
         method set_sin6_family : void ($family : byte)
-    * Fixed the bug that the definitions of the sin6_family and set_sin6_family method in the Sys::Socket::Sockaddr::Un were wrong.
+    * Fixed the bug that the definitions of the sun_family and set_sun_family method in the Sys::Socket::Sockaddr::Un were wrong.
       [Before]
         method sun_family : int ()
         method set_sun_family : void ()
       [After]
         method sun_family : byte ()
         method set_sun_family : void ($family : byte)
+    * Fixed the bug that the definitions of the ss_family and set_ss_family method in the Sys::Socket::Sockaddr::Storage were wrong.
+      [Before]
+        method ss_family : int ()
+        method set_ss_family : void ()
+      [After]
+        method ss_family : byte ()
+        method set_ss_family : void ($family : byte)
 
   [Test Fix]
     * Fix the test of the times method in the Sys::Process class.
